logs/gtapps-mp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gtapps_mp'...
Compiling './lib/python3.5/site-packages/gtapps_mp/gtdiffrsp_mp.py'...
***   File "./lib/python3.5/site-packages/gtapps_mp/gtdiffrsp_mp.py", line 24
    print "Starting calculation on interval {} to {}".format(times[0],times[1])
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gtapps_mp/gtexpmap_mp.py'...
***   File "./lib/python3.5/site-packages/gtapps_mp/gtexpmap_mp.py", line 21
    print "Starting calculation of region {},{} to {},{}".format(square[0][0][0],
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gtapps_mp/gtltcube_mp.py'...
***   File "./lib/python3.5/site-packages/gtapps_mp/gtltcube_mp.py", line 25
    print "Starting calculation on interval {} to {}".format(times[0],times[1])
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gtapps_mp/gtsrcmaps_mp.py'...
***   File "./lib/python3.5/site-packages/gtapps_mp/gtsrcmaps_mp.py", line 86
    print "Did not delete the following temporary files:"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gtapps_mp/gttsmap_mp.py'...
***   File "./lib/python3.5/site-packages/gtapps_mp/gttsmap_mp.py", line 152
    print command
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gtapps_mp-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
